# Chastibrowse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
chastibrowse/: __init__.py  chaster.py  config.toml  config_helper.py  datatypes.py  format_table.py  main.py
